<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_small"
    android:gravity="center_horizontal|center_vertical"
    tools:context=".OptionsActivity">


    <TextView
        android:id="@+id/textView83"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Текущая сложность: МАКСИМУМ"
        android:background="@color/bgGrayColor"
        android:gravity="center"
        android:textSize="24dp"/>
    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        android:layout_marginTop="15dp"
        style="@style/buttonStyle"
        android:text="@string/Diff1" />
    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        android:layout_marginTop="15dp"
        style="@style/buttonStyle"
        android:text="@string/Diff2" />
    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        android:layout_marginTop="15dp"
        style="@style/buttonStyle"
        android:text="@string/Diff3" />


    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        android:layout_marginTop="15dp"
        style="@style/buttonStyle"
        android:text="@string/Menu" />


</LinearLayout>