<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal|center_vertical"
    android:background="@drawable/bg_small"
    tools:context=".GameActivity">

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:stretchColumns="*"
        android:background="#00000000"
        android:weightSum="0.9"
        android:id="@+id/mainTableLayout">

    </TableLayout>

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:stretchColumns="*"
        android:weightSum="1">
        <TableRow
            android:weightSum="1">
            <Button
                android:id="@+id/button1"
                android:layout_weight="0.2"
                android:layout_height="wrap_content"
                style="@style/buttonStyle"
                android:layout_marginTop="5dp"
                android:width="0dp"
                android:text="1" />
            <Button
                android:id="@+id/button2"
                android:layout_weight="0.2"
                android:layout_height="wrap_content"
                style="@style/buttonStyle"
                android:layout_marginTop="5dp"
                android:width="0dp"
                android:text="2" />
            <Button
                android:id="@+id/button3"
                android:layout_weight="0.2"
                android:layout_height="wrap_content"
                style="@style/buttonStyle"
                android:layout_marginTop="5dp"
                android:width="0dp"
                android:text="3" />
            <Button
                android:id="@+id/button4"
                android:layout_weight="0.2"
                android:layout_height="wrap_content"
                style="@style/buttonStyle"
                android:layout_marginTop="5dp"
                android:width="0dp"
                android:text="4" />
            <Button
                android:id="@+id/button5"
                android:layout_weight="0.2"
                android:layout_height="wrap_content"
                style="@style/buttonStyle"
                android:layout_marginTop="5dp"
                android:width="0dp"
                android:text="5" />
        </TableRow>
        <TableRow
            android:weightSum="1">
            <Button
                android:id="@+id/button6"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                style="@style/buttonStyle"
                android:layout_marginTop="5dp"
                android:width="0dp"
                android:text="6" />
            <Button
                android:id="@+id/button7"
                android:layout_weight="0.2"
                android:layout_height="wrap_content"
                style="@style/buttonStyle"
                android:layout_marginTop="5dp"
                android:width="0dp"
                android:text="7" />
            <Button
                android:id="@+id/button8"
                android:layout_weight="0.2"
                android:layout_height="wrap_content"
                style="@style/buttonStyle"
                android:layout_marginTop="5dp"
                android:width="0dp"
                android:text="8" />
            <Button
                android:id="@+id/button9"
                android:layout_weight="0.2"
                android:layout_height="wrap_content"
                style="@style/buttonStyle"
                android:layout_marginTop="5dp"
                android:width="0dp"
                android:text="9" />
            <Button
                android:id="@+id/button"
                android:layout_weight="0.2"
                android:layout_height="wrap_content"
                style="@style/buttonStyle"
                android:layout_marginTop="5dp"
                android:width="0dp"
                android:text="@string/Pen" />
        </TableRow>
        <TableRow
            android:weightSum="0.9">
            <Button
                android:id="@+id/button10"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                style="@style/buttonStyle"
                android:layout_marginTop="5dp"
                android:width="0dp"
                android:text="@string/Menu" />
            <Button
                android:id="@+id/button11"
                android:layout_weight="0.3"
                android:layout_height="wrap_content"
                style="@style/buttonStyle"
                android:layout_marginTop="5dp"
                android:width="0dp"
                android:text="@string/AUX" />
            <Button
                android:id="@+id/button12"
                android:layout_weight="0.3"
                android:layout_height="wrap_content"
                style="@style/buttonStyle"
                android:layout_marginTop="5dp"
                android:width="0dp"
                android:text="@string/Undo" />
        </TableRow>
    </TableLayout>
</LinearLayout>